--- a/Html Canvas/index.html
+++ b/Html Canvas/index.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
 
 <style>
   html, body {
@@ -15,5 +13,6 @@
   }
 </style>
 
+<script src="script.js"></script>
 </body>
 </html>
